--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,35 @@
-name: Python Code Quality Check
+main.yml
+name: Code Quality Analysis
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: push
 
 permissions:
   security-events: write
 
 jobs:
-  lint:
+  lint_code:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
+      # Descargar el código
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Python
+      # Configurar Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # Step 3: Install pylint
+      # Instalar pylint
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
           pip install pylint
 
-      # Step 4: Run pylint analysis
-      - name: Run pylint analysis
-        run: |
-          pylint **/*.py  # Adjust based on your repo's structure
-
-      # Step 5: Set up CodeQL scanning (v3)
-      - name: Set up CodeQL
-        uses: github/codeql-action/init@v3
+      # Ejecutar análisis de código con pylint
+      - name: Run Code Quality Analysis
+        uses: advanced-security/python-lint-code-scanning-action@v1
         with:
-          languages: python
-          
-      # Step 6: Run CodeQL analysis
-      - name: Perform CodeQL analysis
-        uses: github/codeql-action/analyze@v3
+          linter: pylint
+
